# OpenReflectivity

./: .gitignore  AGENTS.md  CMakeLists.txt  README  README.md
shaders/: ref.frag  ref.vert
src/: main.cpp
src/gl/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
src/rsl/: rsl_wrapper.cpp  rsl_wrapper.hpp
